objects/Solution.object
<CustomObject>
    <businessProcesses>
        <fullName>Creator</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Draft</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reviewed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Reviewer</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned to SME</fullName>
        </values>
        <values>
            <fullName>Draft</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Obsolete</fullName>
        </values>
        <values>
            <fullName>Reviewed</fullName>
        </values>
        <values>
            <fullName>Reviewed by SME</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Access_Level_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>used by Solution Manager to notate item is missing from solution</inlineHelpText>
        <label>Access Level Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_Level__c</fullName>
        <label>ILM/CRM Access Level</label>
        <picklist>
            <picklistValues>
                <fullName>Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Available_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>used by the solution manager to notate when this item is missing from a solution</inlineHelpText>
        <label>Available Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_SME__c</fullName>
        <label>Date Assigned to SME</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Access_Level__c</fullName>
        <label>Inventory Access Level</label>
        <picklist>
            <picklistValues>
                <fullName>Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>Legacy ObjectID for Migration Purposes</description>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_By_Role__c</fullName>
        <formula>LastModifiedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modified By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navigation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>used by the solution manager to notate when this item is missing from a solution</inlineHelpText>
        <label>Navigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>used by the solution manager to notate when this item is missing from a solution</inlineHelpText>
        <label>Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Product_s__c</fullName>
        <label>Related Product(s)</label>
        <picklist>
            <picklistValues>
                <fullName>AIS Incentives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewer_Notes__c</fullName>
        <inlineHelpText>used by the Solution Manager</inlineHelpText>
        <label>Reviewer Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>SME = Subject Matter Expert.  This looks up an employee to assign the solution review to</inlineHelpText>
        <label>SME</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Solutions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Screenshot__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>used by the solution manager to notate when this item is missing from a solution</inlineHelpText>
        <label>Screenshot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visible_Internally_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>this is checked for Solutions that are created to inform internal employees of how to do something or provide information</inlineHelpText>
        <label>Visible Internally Only</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllReviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS</field>
            <operation>equals</operation>
            <value>Reviewed</value>
        </filters>
        <label>All Reviewed Solutions</label>
    </listViews>
    <listViews>
        <fullName>AllUnreviewedSolutions</fullName>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.CREATED_DATE</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Unreviewed Solutions</label>
    </listViews>
    <listViews>
        <fullName>All_Solutions1</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SOLUTION.TIMES_USED</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Solutions</label>
    </listViews>
    <listViews>
        <fullName>Externally_available</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SOLUTION.TIMES_USED</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visible_Internally_Only__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Externally available</label>
    </listViews>
    <listViews>
        <fullName>Internal_Working_Solutions</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>Visible_Internally_Only__c</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SOLUTION.STATUS</field>
            <operation>notEqual</operation>
            <value>Assigned to SME,Draft,Duplicate,Obsolete,Reviewed,Reviewed by SME</value>
        </filters>
        <filters>
            <field>Visible_Internally_Only__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Internal Working Solutions</label>
    </listViews>
    <listViews>
        <fullName>New_Solutions_for_the_last_30_Days</fullName>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SOLUTION.TIMES_USED</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>New Solutions for the last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>Reviewed_by_MO</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SOLUTION.TIMES_USED</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>mo</value>
        </filters>
        <label>Reviewed by MO</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Reviewed_by_SME</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>Reviewed_By__c</columns>
        <columns>Reviewer_Notes__c</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS</field>
            <operation>equals</operation>
            <value>Reviewed by SME</value>
        </filters>
        <label>Reviewed by SME</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Salesperson_Solutions</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Access_Level__c</field>
            <operation>equals</operation>
            <value>Salesperson</value>
        </filters>
        <label>Salesperson Solutions</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Solutions_Modified_by_Marla</fullName>
        <columns>SOLUTION.CREATED_DATE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>SME__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS</field>
            <operation>notEqual</operation>
            <value>Reviewed,Draft</value>
        </filters>
        <filters>
            <field>Visible_Internally_Only__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Working Solutions</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Solutions_still_in_Draft_Phase</fullName>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>SOLUTION.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>SOLUTION.EXTERNAL</columns>
        <columns>SOLUTION.IS_PUBLISHED_PKB</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Solutions still in Draft Phase</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Working_Solutions_by_Author</fullName>
        <columns>SOLUTION.CREATED_DATE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>SME__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS</field>
            <operation>notEqual</operation>
            <value>Reviewed,Draft,Assigned to SME,Duplicate,Obsolete,Reviewed by SME</value>
        </filters>
        <filters>
            <field>Visible_Internally_Only__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Working Solutions by Author</label>
    </listViews>
    <recordTypes>
        <fullName>Creator</fullName>
        <active>true</active>
        <businessProcess>Creator</businessProcess>
        <label>Creator</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reviewer</fullName>
        <active>true</active>
        <businessProcess>Reviewer</businessProcess>
        <label>Reviewer</label>
    </recordTypes>
    <recordTypes>
        <fullName>vAuto_Creator</fullName>
        <active>true</active>
        <businessProcess>Creator</businessProcess>
        <description>Creator record type for vAuto</description>
        <label>vAuto Creator</label>
    </recordTypes>
    <recordTypes>
        <fullName>vAuto_Reviewer</fullName>
        <active>true</active>
        <businessProcess>Reviewer</businessProcess>
        <description>Reviewer record type for vAuto</description>
        <label>vAuto Reviewer</label>
    </recordTypes>
</CustomObject>